# scribe

./: .gitignore  Cargo.toml  flake.nix  justfile
src/: audio.rs  main.rs
